--- a/index.html
+++ b/index.html
@@ -3,25 +3,19 @@
 <head>
 	<title>Tic Tac Toe</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<script type="text/javascript" rel="script.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
 	<div class="board">
-		<div id="row_1" class="row">
-	       <div class="box" id="boxOne">1</div>
-	       <div class="box" id="boxTwo">2</div>
-	       <div class="box" id="boxThree">3</div>
-	     </div>
-	     <div id="row_2" class="row">
-	        <div class="box" id="boxFour">4</div>
-	        <div class="box" id="boxFive">5</div>
-	        <div class="box" id="boxSix">6</div>
-	     </div>
-	     <div id="row_3" class="row">
-	        <div class="box" id="boxSeven">7</div>
-	        <div class="box" id="boxEight">8</div>
-	        <div class="box" id="boxNine">9</div>
-	     </div>
+		<div class="box" id="boxOne">1</div>
+		<div class="box" id="boxTwo">2</div>
+		<div class="box" id="boxThree">3</div>
+		<div class="box" id="boxFour">4</div>
+		<div class="box" id="boxFive">5</div>
+		<div class="box" id="boxSix">6</div>
+		<div class="box" id="boxSeven">7</div>
+		<div class="box" id="boxEight">8</div>
+		<div class="box" id="boxNine">9</div>
 	</div>
 </body>
 </html>
