--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
 </head>
 <body>
 	<div class="board">
-		<div class="box" id="boxOne">1</div>
-		<div class="box" id="boxTwo">2</div>
-		<div class="box" id="boxThree">3</div>
-		<div class="box" id="boxFour">4</div>
-		<div class="box" id="boxFive">5</div>
-		<div class="box" id="boxSix">6</div>
-		<div class="box" id="boxSeven">7</div>
-		<div class="box" id="boxEight">8</div>
-		<div class="box" id="boxNine">9</div>
+		<div class="box" id="boxOne"></div>
+		<div class="box" id="boxTwo"></div>
+		<div class="box" id="boxThree"></div>
+		<div class="box" id="boxFour"></div>
+		<div class="box" id="boxFive"></div>
+		<div class="box" id="boxSix"></div>
+		<div class="box" id="boxSeven"></div>
+		<div class="box" id="boxEight"></div>
+		<div class="box" id="boxNine"></div>
+	</div>
+	<div class="reset" id="reset">
+		RESET
 	</div>
 </body>
 </html>
