added next player display

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
+	<h1>Shall we play a game?</h1>
+
 	<div class="board">
 		<div class="box" id="boxOne"></div>
 		<div class="box" id="boxTwo"></div>
@@ -17,8 +19,13 @@
 		<div class="box" id="boxEight"></div>
 		<div class="box" id="boxNine"></div>
 	</div>
-	<div class="reset" id="reset">
-		RESET
+	<div>
+		<h2>Next player:</h2>
+		<div id="displayNext">
+		</div>
+		<div class="reset" id="reset">
+			RESET
+		</div>
 	</div>
 </body>
 </html>
