small tweaks around next player

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Tic Tac Toe</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="text/javascript" src="script.js"></script>
+	<!-- by Lisa Vogt, https://github.com/lisavogtsf/tictactoe_js -->
 </head>
 <body>
 	<h1>Shall we play a game?</h1>
